Se implementa funcion de cerrar formulario

--- a/html/index.html
+++ b/html/index.html
@@ -152,6 +152,11 @@
     <!--     ModalChe  se llaman los datos del cliente  -->
     <div class="ModalCheckout">
         <form id="formulario">
+            <div id="btn_cerrrar">
+                <button >
+                    <img src="../images/icon-close.svg" alt="">
+                </button>
+            </div>
             <input type="text" id="Name" placeholder="Nombre ">
             <label for="Nombre"></label>
             <input type="text" id="identification" placeholder="cedula">
@@ -166,7 +171,7 @@
             <input type="text" name="id" id="id" class="ms-1 edit body1Regular form-control">
             <div>
                 <button id="truck-modal__delete" tabindex="0">Compra realizada</button>
-                <button id="truck-modal__guardar" tabindex="0">Guardar datos</button>
+                <button type="submit" id="truck-modal__guardar" tabindex="0">Guardar datos</button>
                 <button id="truck-modal__eliminar" tabindex="0">Eliminar datos</button>
             </div>
 
