--- a/new-colection.html
+++ b/new-colection.html
@@ -64,16 +64,15 @@
     <div class="swiper mySwiper" id="mySwipper">
         <script>
             const contenedorProductos = document.querySelector("#mySwipper");
+            const redirect = "../product-detail/index.html"
             const cargarProductos = async () => {
                 const url = "http://localhost:3000/productos"
                 fetch(url).then(res => res.json())
                     .then(data => {
-                        console.log(data)
                         data.forEach(producto => {
                             const div = document.createElement("div");
                             div.classList.add("producto");
                             div.innerHTML = ` <div class="swiper-slide">
-
                                 <div class="icons">
                                 <i class="fa-solid fa-circle-arrow-left"></i>
                                 <img src="images/logo.svg" alt="">
@@ -84,14 +83,11 @@
                                     <div class="produc-img">
                                     <img src=${producto.img.imagenUno} alt="">
                                 </div>
-
                                     <span>${producto.precio}</span>
                                     <h3>${producto.nombre}</h3>
-                                    
                                 </div >
-
                                 </div>
-                                <a href="" class="btn-1">ver</a>
+                                <a href=${redirect} class="btn-1">Ver</a>
                                 </div>` ;
 
                             contenedorProductos.append(div);
