--- a/men-colection.html
+++ b/men-colection.html
@@ -61,7 +61,7 @@
             <img class="avatar" src="./images/image-avatar.png" alt="profile">
         </div>
     </header>
-    <div class="contendor-productos" id="mySwipper">
+    <div class="swiper mySwiper" id="mySwipper">
         <script>
             const contenedorProductos = document.querySelector("#mySwipper");
             const cargarProductos = async () => {
