Implementacion del about y contact. Correccion de redirecciones

--- a/html/index.html
+++ b/html/index.html
@@ -32,12 +32,11 @@
 
                 <nav class="iconos-head">
                     <ul class="iconos-head__items">
-                        <li><a class="iconos-head__link"
-                                href="https://www.youtube.com/watch?v=RiB4mV3VnRY">Collections</a></li>
-                        <li><a class="iconos-head__link" href="#">Men</a></li>
-                        <li><a class="iconos-head__link" href="#">Women</a></li>
-                        <li><a class="iconos-head__link" href="#">About</a></li>
-                        <li><a class="iconos-head__link" href="#">Contact</a></li>
+                        <li><a class="iconos-head__link" href="../new-colection.html">Collections</a></li>
+                        <li><a class="iconos-head__link" href="../men-colection.html">Men</a></li>
+                        <li><a class="iconos-head__link" href="../women-colection.html">Women</a></li>
+                        <li><a class="iconos-head__link" href="../about.html">About</a></li>
+                        <li><a class="iconos-head__link" href="../Contact.html">Contact</a></li>
                     </ul>
 
                 </nav>
@@ -50,11 +49,11 @@
                 <nav class="iconos-head2">
                     <img class="iconos-head__close-icon" src="./images/icon-close.svg" alt="">
                     <ul class="iconos-head__item">
-                        <li><a class="iconos-head__link" href="#">Collections</a></li>
-                        <li><a class="iconos-head__link" href="#">Men</a></li>
-                        <li><a class="iconos-head__link" href="#">Women</a></li>
-                        <li><a class="iconos-head__link" href="#">About</a></li>
-                        <li><a class="iconos-head__link" href="#">Contact</a></li>
+                        <li><a class="iconos-head__link" href="../new-colection.html">Collections</a></li>
+                        <li><a class="iconos-head__link" href="../men-colection.html">Men</a></li>
+                        <li><a class="iconos-head__link" href="../women-colection.html">Women</a></li>
+                        <li><a class="iconos-head__link" href="../about.html">About</a></li>
+                        <li><a class="iconos-head__link" href="../Contact.html">Contact</a></li>
                     </ul>
                 </nav>
 
@@ -222,7 +221,6 @@
             document.getElementById("#formulario").reset();
         }</script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!--<script src="../formulario/app.js"></script>-->
 </body>
 
 </html>
