--- a/women-colection.html
+++ b/women-colection.html
@@ -23,11 +23,11 @@
 
             <nav class="iconos-head">
                 <ul class="iconos-head__items">
-                    <li><a class="iconos-head__link" href="new-colection.html">Collections</a></li>
-                    <li><a class="iconos-head__link" href="men-colection.html">Men</a></li>
-                    <li><a class="iconos-head__link" href="http://127.0.0.1:5500/women-colection.html">Women</a></li>
-                    <li><a class="iconos-head__link" href="#">About</a></li>
-                    <li><a class="iconos-head__link" href="#">Contact</a></li>
+                    <li><a class="iconos-head__link" href="./new-colection.html">Collections</a></li>
+                    <li><a class="iconos-head__link" href="./men-colection.html">Men</a></li>
+                    <li><a class="iconos-head__link" href="./women-colection.html">Women</a></li>
+                    <li><a class="iconos-head__link" href="./about.html">About</a></li>
+                    <li><a class="iconos-head__link" href="./Contact.html">Contact</a></li>
                 </ul>
 
             </nav>
@@ -35,18 +35,16 @@
         </div>
 
 
-
-
         <!-- // ! -- inicio modal navbar -- // -->
         <div class="head-background">
             <nav class="iconos-head2">
                 <img class="iconos-head__close-icon" src="./images/icon-close.svg" alt="">
                 <ul class="iconos-head__item">
-                    <li><a class="iconos-head__link" href="new-colection.html">Collections</a></li>
-                    <li><a class="iconos-head__link" href="men-colection.html">Men</a></li>
-                    <li><a class="iconos-head__link" href="women-colection.html">Women</a></li>
-                    <li><a class="iconos-head__link" href="#">About</a></li>
-                    <li><a class="iconos-head__link" href="#">Contact</a></li>
+                    <li><a class="iconos-head__link" href="./new-colection.html">Collections</a></li>
+                    <li><a class="iconos-head__link" href="./men-colection.html">Men</a></li>
+                    <li><a class="iconos-head__link" href="./women-colection.html">Women</a></li>
+                    <li><a class="iconos-head__link" href="./about.html">About</a></li>
+                    <li><a class="iconos-head__link" href="./Contact.html">Contact</a></li>
                 </ul>
             </nav>
 
